2023-10-15  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-repo-mode-menu):
	* gentoo-newsitem-mode.el (gentoo-newsitem-mode-menu):
	* glep-mode.el (glep-mode-menu):
	* devbook-mode.el (devbook-mode-menu): Backquote is not needed.

	* ebuild-mode.el (ebuild-mode-time-string): Move setting of TZ
	into the unwind-protect form.

	* ebuild-mode.el (static-if): New macro, taken from APEL.
	(sh-must-be-shell-mode): Use it. This should finally fix the
	byte-compile warning for defadvice in Emacs 30.

	* glep-mode.el (glep): Change parent group to text, because the wp
	group is deprecated since Emacs 26.

	* gentoo-newsitem-mode.el (gentoo-newsitem-insert-skeleton):
	* glep-mode.el (glep-mode-insert-skeleton): Drop local require
	for ebuild-mode, as it is required globally.

2023-10-06  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.68 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

	* ebuild-mode.el (ebuild-mode-add-font-lock): New function.
	(ebuild-mode-hook): Add it, instead of an anonymous function.
	* glep-mode.el (glep-mode-add-font-lock, glep-mode-hook): Ditto.

2023-09-25  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.texi (ebuild-mode): Document the
	ebuild-mode-find-workdir command and its keybinding.
	(ebuild-repo-mode): Document ebuild-mode-xml-indent-tabs.

2023-09-20  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-tag-line-regexp): New variable.
	(ebuild-repo-mode): Set paragraph-separate when in conf-unix-mode.

2023-09-16  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-time-string): Test if
	format-time-string can accept three arguments.

	* ebuild-mode.el (sh-must-be-shell-mode): Test if the function is
	defined at compile time. This should only be the case for Emacs
	versions where defadvice is unobsolete.

	* glep-mode.el (rst-classify-adornment)
	(glep-mode-ignore-preamble): Use :before-while instead of :around
	as advice combinator.
