@@ -61,8 +61,7 @@
   "</chapter>\n"
   "</guide>\n")
 
-(define-key devbook-mode-map
-  "\C-c\C-n" 'devbook-insert-skeleton)
+(define-key devbook-mode-map "\C-c\C-n" #'devbook-insert-skeleton)
 
 (easy-menu-define devbook-mode-menu devbook-mode-map
   "Menu for `devbook-mode'."
